@@ -3,3 +3,4 @@ DoRec.hs		DoRec not yet supported.
 CStyleLinePragmas.hs	Shouldn't succeed. HSE does not and will not support C-style line pragmas.
 QuasiQuoteSplice.hs	Splicing inside quasi-quotes fails
 ExtraEndBrace.hs	Should fail - but gracefully
+ArityMismatch.hs	Should fail - but give error message in the right place
